# contracts/openapi.yaml
@@ -92,6 +92,10 @@ paths:
     $ref: "./creation.yaml#/paths/~1creation~1sessions~1{sessionID}~1materials~1from-result"
   /creation/sessions/{sessionID}/tasks:
     $ref: "./creation.yaml#/paths/~1creation~1sessions~1{sessionID}~1tasks"
+  /creation/materials/{materialID}/thumbnail-url:
+    $ref: "./creation.yaml#/paths/~1creation~1materials~1{materialID}~1thumbnail-url"
+  /creation/materials/{materialID}/preview-url:
+    $ref: "./creation.yaml#/paths/~1creation~1materials~1{materialID}~1preview-url"
   /creation/materials/{materialID}:
     $ref: "./creation.yaml#/paths/~1creation~1materials~1{materialID}"
   /creation/provider-connection:
